[tool.poetry]
name = "openbb-tmx"
version = "0.1.0a5"
description = "TMX extension for OpenBB"
authors = ["DeeLeeRamone <deeleeramone@proton.me"]
readme = "README.md"
packages = [{ include = "openbb_tmx" }]

[tool.poetry.dependencies]
python = "^3.8"
requests-cache = "^1.1.0"
random-user-agent = "^1.0.1"
openpyxl = "^3.1.2"
openbb-core = "^0.1.0a6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."openbb_provider_extension"]
tmx = "openbb_tmx:tmx_provider"
