[tool.poetry]
name = "openbb-tmx"
version = "1.0.1"
description = "Unofficial TMX data provider extension for the OpenBB Platform - Public Canadian markets data for Python and Fast API."
authors = ["DeeLeeRamone <deeleeramone@proton.me>"]
readme = "README.md"
packages = [{ include = "openbb_tmx" }]

[tool.poetry.dependencies]
python = "^3.8"
requests-cache = "^1.1.1"
random-user-agent = "^1.0.1"
pandas-market-calendars = "^4.3.1"
openpyxl = "^3.1.2"
openbb-core = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."openbb_provider_extension"]
tmx = "openbb_tmx:tmx_provider"
